App.js > Main header centered

--- a/client/src/controllers/App.css
+++ b/client/src/controllers/App.css
@@ -1,4 +1,9 @@
-.homepage-link {
+.app-name {
+    text-align: center;
+    padding: 20px;
+}
+
+.app-name a {
     color: inherit;
     text-decoration: none;
 }
